# UkranioFest

./: CMakeLists.txt  findWord.cpp  respuesta.cpp  servidor.cpp  sortDiccionario.cpp
Proyecto/: mainClient  mainClient.cpp  mainServer.cpp
ProyectoSIRVETARDA/: Makefile  a.out  mainClient.cpp  servidor
